[package]
name = "sht25"
version = "0.1.0-alpha.2"
authors = ["Jurgis Balciunas <chemicstry@gmail.com>"]
edition = "2021"
description = "Async Rust driver for SHT25 temperature/humidity sensor"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/chemicstry/sht25"
homepage = "https://github.com/chemicstry/sht25"
documentation = "https://docs.rs/sht25"
keywords = ["embedded-hal-driver", "sht25", "embedded", "no-std"]
categories = ["embedded"]
readme = "README.md"

[dependencies]
embedded-hal-async = "=0.1.0-alpha.1"

[dev-dependencies]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", features = ["nightly"]}
embassy-util = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "time-tick-32768hz"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "defmt", "stm32f429zi", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-rt = "0.7.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
opt-level = 3

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
lto = 'fat'
opt-level = 3

[patch."https://github.com/embassy-rs/embassy"]
embassy-embedded-hal = { git = "https://github.com/chemicstry/embassy", branch = "i2c_pullup" }
embassy-util = { git = "https://github.com/chemicstry/embassy", branch = "i2c_pullup" }
embassy-executor = { git = "https://github.com/chemicstry/embassy", branch = "i2c_pullup" }
embassy-stm32 = { git = "https://github.com/chemicstry/embassy", branch = "i2c_pullup" }
