[package]
name = "sht25"
version = "0.2.0"
authors = ["Jurgis Balciunas <chemicstry@gmail.com>"]
edition = "2021"
description = "Rust driver for SHT25 temperature/humidity sensor"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/chemicstry/sht25"
homepage = "https://github.com/chemicstry/sht25"
documentation = "https://docs.rs/sht25"
keywords = ["embedded-hal-driver", "sht25", "embedded", "no-std"]
categories = ["embedded"]
readme = "README.md"

[dependencies]
embedded-hal = "1.0"

[dev-dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
stm32f4xx-hal = { version = "0.20", features = ["stm32f429"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
opt-level = 3

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
lto = 'fat'
opt-level = 3
